Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test3.java
/*
Test3
Objetivo: Detectar un error en la declaracion de un constructor.
Falta un identificador para el tipo Entero.
*/

class UnaClase extends Hola {
	varinst TipoVariable n;
	
	UnaClase(Hola perro, Entero){
	
	}
	
}